--- a/index.html
+++ b/index.html
@@ -5,26 +5,34 @@
 <title>설성푸드 공동구매</title>
 
 <!--
-설성푸드 공동구매 주문서
-Version: v1.4.0
-Status: 상품 선택 + 주문문구 + Google Sheet 연동
+Version: v1.4.1
+- GAS doPost 완전 호환
+- 상품별 price 포함
+- 모바일 + PC 반응형
 -->
 
 <style>
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: #f6f7f9;
+  background: linear-gradient(180deg, #f6f7f9, #eef1f5);
   padding: 20px;
 }
+
 .container {
   max-width: 420px;
   margin: auto;
   background: #fff;
   padding: 20px;
-  border-radius: 14px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  border-radius: 18px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
 }
-h1 { text-align:center; margin-bottom:20px; }
+
+h1 {
+  text-align: center;
+  font-size: 22px;
+  margin-bottom: 20px;
+  letter-spacing: -0.3px;
+}
 
 .field { margin-bottom:16px; }
 .field label {
@@ -35,51 +43,53 @@ h1 { text-align:center; margin-bottom:20px; }
 }
 .field input, .field select {
   width:100%;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #ccc;
+  padding:12px;
+  border-radius:10px;
+  border:1px solid #ddd;
 }
 
 .product {
   display:flex;
-  gap:12px;
-  margin-bottom:16px;
-  padding-bottom:16px;
+  gap:14px;
+  margin-bottom:18px;
+  padding-bottom:18px;
   border-bottom:1px solid #eee;
 }
+
 .product img {
   width: 140px;
   height: 140px;
-  border-radius: 14px;
+  border-radius: 16px;
   object-fit: cover;
   background: #f2f2f2;
 }
+
 .name { font-weight:600; }
-.price { color:#2f80ed; font-weight:700; margin:6px 0; }
+.price { font-weight:700; margin:6px 0; }
 
 .qty-box {
   display:flex;
   align-items:center;
-  gap:8px;
+  gap:10px;
 }
 .qty-box button {
-  width:28px;
-  height:28px;
+  width:32px;
+  height:32px;
   border:none;
-  border-radius:6px;
-  background:#e0e0e0;
-  font-size:16px;
+  border-radius:8px;
+  background:#eee;
+  font-size:18px;
   cursor:pointer;
 }
 .qty {
-  width:24px;
+  width:28px;
   text-align:center;
   font-weight:600;
 }
 
 .total {
-  font-size:16px;
-  font-weight:700;
+  font-size:17px;
+  font-weight:800;
   text-align:right;
   margin-top:20px;
 }
@@ -87,61 +97,39 @@ h1 { text-align:center; margin-bottom:20px; }
 #orderBtn, #copyBtn {
   width:100%;
   margin-top:14px;
-  padding:14px;
+  padding:16px;
   font-size:16px;
   font-weight:700;
   border:none;
-  border-radius:10px;
+  border-radius:12px;
   cursor:pointer;
-}
-#orderBtn { background:#2f80ed; color:#fff; }
-#copyBtn { background:#27ae60; color:#fff; display:none; }
-
-textarea {
-  width:100%;
-  margin-top:12px;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #ccc;
-  font-size:13px;
-  display:none;
-}
-  /* ===== PC 화면 대응 (필수) ===== */
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-
-  .product {
-    align-items: center;
-  }
-
-  .product img {
-    width: 110px;
-    height: 110px;
-  }
-}
-body {
-  background: linear-gradient(180deg, #f6f7f9, #eef1f5);
-}
-
-h1 {
-  font-size: 22px;
-  letter-spacing: -0.3px;
-}
-
-.price {
-  color: #111;
 }
 
 #orderBtn {
   background: linear-gradient(135deg, #2f80ed, #56a0ff);
+  color:#fff;
 }
 
 #copyBtn {
   background: linear-gradient(135deg, #27ae60, #4cd17d);
+  color:#fff;
+  display:none;
 }
 
+textarea {
+  width:100%;
+  margin-top:12px;
+  padding:12px;
+  border-radius:10px;
+  border:1px solid #ccc;
+  font-size:13px;
+  display:none;
+}
+
+/* PC 대응 */
+@media (min-width: 768px) {
+  .container { max-width: 760px; }
+}
 </style>
 </head>
 
@@ -164,8 +152,7 @@ h1 {
 </select>
 </div>
 
-<!-- ================= 상품 리스트 ================= -->
-
+<!-- 상품 리스트 -->
 <div class="product" data-price="15900">
   <img src="images/product1.png">
   <div>
@@ -218,31 +205,27 @@ h1 {
   </div>
 </div>
 
-<!-- ================= 합계 ================= -->
-
 <div class="total">
 총 합계: <span id="total">0</span>원
 </div>
 
 <button id="orderBtn">주문 완료</button>
 <button id="copyBtn">📋 주문문구 복사</button>
-
 <textarea id="orderText" readonly></textarea>
 </div>
 
 <script>
-/* 🔴 Google Apps Script URL */
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbySkr0IA-ltqpem4FNoTcehkV1xbuqRz7WJAOWynpA9DXSMtbkoxZ737nmWajFje4ji/exec";
 
-/* ===== 수량 & 합계 ===== */
-document.querySelectorAll(".product").forEach(product => {
-  const qtyEl = product.querySelector(".qty");
-  product.querySelector(".plus").onclick = () => {
-    qtyEl.innerText = Number(qtyEl.innerText) + 1;
+/* 수량 & 합계 */
+document.querySelectorAll(".product").forEach(p => {
+  const qtyEl = p.querySelector(".qty");
+  p.querySelector(".plus").onclick = () => {
+    qtyEl.innerText = +qtyEl.innerText + 1;
     calc();
   };
-  product.querySelector(".minus").onclick = () => {
-    qtyEl.innerText = Math.max(0, Number(qtyEl.innerText) - 1);
+  p.querySelector(".minus").onclick = () => {
+    qtyEl.innerText = Math.max(0, +qtyEl.innerText - 1);
     calc();
   };
 });
@@ -250,73 +233,51 @@ document.querySelectorAll(".product").forEach(product => {
 function calc() {
   let total = 0;
   document.querySelectorAll(".product").forEach(p => {
-    total += Number(p.dataset.price) * Number(p.querySelector(".qty").innerText);
+    total += p.dataset.price * p.querySelector(".qty").innerText;
   });
   document.getElementById("total").innerText = total.toLocaleString();
 }
 
-/* ===== 주문 완료 ===== */
+/* 주문 완료 */
 document.getElementById("orderBtn").onclick = async () => {
-  const nickname = document.getElementById("nickname").value.trim();
-  const visit = document.getElementById("visit").value;
+  const nickname = nicknameEl.value.trim();
+  const visit = visitEl.value;
 
-  if (!nickname || !visit) {
-    alert("닉네임과 수령일을 입력해 주세요");
-    return;
-  }
+  if (!nickname || !visit) return alert("닉네임과 수령일을 입력하세요");
 
   let items = [];
   let totalNum = 0;
 
   document.querySelectorAll(".product").forEach(p => {
-    const qty = Number(p.querySelector(".qty").innerText);
+    const qty = +p.querySelector(".qty").innerText;
     if (qty > 0) {
-      const price = Number(p.dataset.price);
-      items.push({ name: p.querySelector(".name").innerText, qty });
+      const price = +p.dataset.price;
+      items.push({
+        name: p.querySelector(".name").innerText,
+        qty,
+        price
+      });
       totalNum += price * qty;
     }
   });
 
-  if (items.length === 0) {
-    alert("주문할 상품을 선택해 주세요");
-    return;
-  }
+  if (!items.length) return alert("상품을 선택하세요");
 
-  try {
-    await fetch(SCRIPT_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ nickname, visit, items, total: totalNum })
-    });
-  } catch {
-    alert("주문 저장 실패. 다시 시도해주세요.");
-    return;
-  }
+  await fetch(SCRIPT_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ nickname, visit, items, total: totalNum })
+  });
 
-  const text =
+  orderText.value =
 `${nickname}님
 ${items.map(i => `${i.name} ${i.qty}개`).join(", ")}
-총 ${totalNum.toLocaleString()}원을
-농협 301-0297-8175-81 설성푸드로 입금 부탁드려요!
-감사합니다 😊`;
+총 ${totalNum.toLocaleString()}원 입금 부탁드립니다 😊`;
 
-  document.getElementById("orderText").value = text;
-  document.getElementById("orderText").style.display = "block";
-  document.getElementById("copyBtn").style.display = "block";
-  document.getElementById("orderBtn").disabled = true;
-};
-
-/* ===== 복사 ===== */
-document.getElementById("copyBtn").onclick = () => {
-  const t = document.getElementById("orderText");
-  t.select();
-  document.execCommand("copy");
-  alert("주문문구가 복사되었습니다!");
+  orderText.style.display = copyBtn.style.display = "block";
+  orderBtn.disabled = true;
 };
 </script>
 
 </body>
 </html>
-
-
-
