--- a/index.html
+++ b/index.html
@@ -4,22 +4,15 @@
 <meta charset="UTF-8">
 <title>설성푸드 공동구매</title>
 
-<!--
-Version: v1.4.1
-- GAS doPost 완전 호환
-- 상품별 price 포함
-- 모바일 + PC 반응형
--->
-
 <style>
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   background: linear-gradient(180deg, #f6f7f9, #eef1f5);
-  padding: 20px;
+  padding: 16px;
 }
 
 .container {
-  max-width: 420px;
+  max-width: 760px;
   margin: auto;
   background: #fff;
   padding: 20px;
@@ -31,7 +24,6 @@ h1 {
   text-align: center;
   font-size: 22px;
   margin-bottom: 20px;
-  letter-spacing: -0.3px;
 }
 
 .field { margin-bottom:16px; }
@@ -48,53 +40,51 @@ h1 {
   border:1px solid #ddd;
 }
 
+/* ===== 상품 카드 ===== */
 .product {
-  display:flex;
-  gap:14px;
-  margin-bottom:18px;
-  padding-bottom:18px;
+  margin-bottom: 24px;
   border-bottom:1px solid #eee;
+  padding-bottom:24px;
 }
 
 .product img {
-  width: 140px;
-  height: 140px;
+  width: 100%;
+  height: auto;
   border-radius: 16px;
-  object-fit: cover;
-  background: #f2f2f2;
+  margin-bottom: 12px;
 }
 
-.name { font-weight:600; }
-.price { font-weight:700; margin:6px 0; }
+.name { font-weight:700; font-size:15px; }
+.price { font-weight:800; margin:6px 0; }
 
 .qty-box {
   display:flex;
   align-items:center;
-  gap:10px;
+  gap:12px;
+  margin-top:10px;
 }
 .qty-box button {
-  width:32px;
-  height:32px;
+  width:36px;
+  height:36px;
   border:none;
-  border-radius:8px;
+  border-radius:10px;
   background:#eee;
   font-size:18px;
-  cursor:pointer;
 }
 .qty {
-  width:28px;
+  min-width:30px;
   text-align:center;
-  font-weight:600;
+  font-weight:700;
 }
 
 .total {
-  font-size:17px;
-  font-weight:800;
+  font-size:18px;
+  font-weight:900;
   text-align:right;
   margin-top:20px;
 }
 
-#orderBtn, #copyBtn {
+button {
   width:100%;
   margin-top:14px;
   padding:16px;
@@ -102,7 +92,6 @@ h1 {
   font-weight:700;
   border:none;
   border-radius:12px;
-  cursor:pointer;
 }
 
 #orderBtn {
@@ -122,13 +111,19 @@ textarea {
   padding:12px;
   border-radius:10px;
   border:1px solid #ccc;
-  font-size:13px;
   display:none;
 }
 
-/* PC 대응 */
+/* PC에서만 가로 배치 */
 @media (min-width: 768px) {
-  .container { max-width: 760px; }
+  .product {
+    display:flex;
+    gap:20px;
+  }
+  .product img {
+    width: 260px;
+    margin-bottom:0;
+  }
 }
 </style>
 </head>
@@ -139,164 +134,77 @@ textarea {
 
 <div class="field">
 <label>오픈채팅 닉네임</label>
-<input id="nickname" placeholder="카카오톡 닉네임 입력">
+<input id="nickname">
 </div>
 
 <div class="field">
 <label>방문 수령일</label>
 <select id="visit">
-  <option value="">선택</option>
-  <option value="금">금</option>
-  <option value="토">토</option>
-  <option value="일">일</option>
+<option value="">선택</option>
+<option>금</option>
+<option>토</option>
+<option>일</option>
 </select>
 </div>
 
-<!-- 상품 리스트 -->
+<!-- 상품 -->
 <div class="product" data-price="15900">
-  <img src="images/product1.png">
-  <div>
-    <div class="name">무항생제 한우 1등급 등심 200g</div>
-    <div class="price">15,900원</div>
-    <div class="qty-box">
-      <button class="minus">-</button>
-      <div class="qty">0</div>
-      <button class="plus">+</button>
-    </div>
-  </div>
+<img src="images/product1.png">
+<div>
+<div class="name">무항생제 한우 1등급 등심 200g</div>
+<div class="price">15,900원</div>
+<div class="qty-box">
+<button class="minus">-</button>
+<div class="qty">0</div>
+<button class="plus">+</button>
+</div>
+</div>
 </div>
 
 <div class="product" data-price="9800">
-  <img src="images/product2.png">
-  <div>
-    <div class="name">제주한돈 육포 50g × 4팩</div>
-    <div class="price">9,800원</div>
-    <div class="qty-box">
-      <button class="minus">-</button>
-      <div class="qty">0</div>
-      <button class="plus">+</button>
-    </div>
-  </div>
+<img src="images/product2.png">
+<div>
+<div class="name">제주한돈 육포 50g × 4팩</div>
+<div class="price">9,800원</div>
+<div class="qty-box">
+<button class="minus">-</button>
+<div class="qty">0</div>
+<button class="plus">+</button>
+</div>
+</div>
 </div>
 
 <div class="product" data-price="9900">
-  <img src="images/product3.png">
-  <div>
-    <div class="name">우된장 한우된장찌개 밀키트 × 2</div>
-    <div class="price">9,900원</div>
-    <div class="qty-box">
-      <button class="minus">-</button>
-      <div class="qty">0</div>
-      <button class="plus">+</button>
-    </div>
-  </div>
+<img src="images/product3.png">
+<div>
+<div class="name">우된장 한우된장찌개 밀키트 × 2</div>
+<div class="price">9,900원</div>
+<div class="qty-box">
+<button class="minus">-</button>
+<div class="qty">0</div>
+<button class="plus">+</button>
+</div>
+</div>
 </div>
 
 <div class="product" data-price="19900">
-  <img src="images/product4.png">
-  <div>
-    <div class="name">피터루거 스테이크 하우스 밀키트 × 4</div>
-    <div class="price">19,900원</div>
-    <div class="qty-box">
-      <button class="minus">-</button>
-      <div class="qty">0</div>
-      <button class="plus">+</button>
-    </div>
-  </div>
+<img src="images/product4.png">
+<div>
+<div class="name">피터루거 스테이크 하우스 밀키트 × 4</div>
+<div class="price">19,900원</div>
+<div class="qty-box">
+<button class="minus">-</button>
+<div class="qty">0</div>
+<button class="plus">+</button>
+</div>
+</div>
 </div>
 
-<div class="total">
-총 합계: <span id="total">0</span>원
-</div>
+<div class="total">총 합계: <span id="total">0</span>원</div>
 
 <button id="orderBtn">주문 완료</button>
 <button id="copyBtn">📋 주문문구 복사</button>
 <textarea id="orderText" readonly></textarea>
 </div>
 
-<script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbySkr0IA-ltqpem4FNoTcehkV1xbuqRz7WJAOWynpA9DXSMtbkoxZ737nmWajFje4ji/exec";
-
-/* 수량 & 합계 */
-document.querySelectorAll(".product").forEach(p => {
-  const qtyEl = p.querySelector(".qty");
-  p.querySelector(".plus").onclick = () => {
-    qtyEl.innerText = +qtyEl.innerText + 1;
-    calc();
-  };
-  p.querySelector(".minus").onclick = () => {
-    qtyEl.innerText = Math.max(0, +qtyEl.innerText - 1);
-    calc();
-  };
-});
-
-function calc() {
-  let total = 0;
-  document.querySelectorAll(".product").forEach(p => {
-    total += p.dataset.price * p.querySelector(".qty").innerText;
-  });
-  document.getElementById("total").innerText = total.toLocaleString();
-}
-
-/* 주문 완료 */
-document.getElementById("orderBtn").onclick = async () => {
-  const nickname = document.getElementById("nickname").value.trim();
-  const visit = document.getElementById("visit").value;
-
-  if (!nickname || !visit) {
-    alert("닉네임과 수령일을 입력하세요");
-    return;
-  }
-
-  let items = [];
-  let totalNum = 0;
-
-  document.querySelectorAll(".product").forEach(p => {
-    const qty = +p.querySelector(".qty").innerText;
-    if (qty > 0) {
-      const price = +p.dataset.price;
-      items.push({
-        name: p.querySelector(".name").innerText,
-        qty,
-        price
-      });
-      totalNum += price * qty;
-    }
-  });
-
-  if (!items.length) {
-    alert("상품을 선택하세요");
-    return;
-  }
-
-  await fetch(SCRIPT_URL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      nickname,
-      visit,
-      items,
-      total: totalNum
-    })
-  });
-
-  const orderText = document.getElementById("orderText");
-  const copyBtn = document.getElementById("copyBtn");
-  const orderBtn = document.getElementById("orderBtn");
-
-  orderText.value =
-`${nickname}님
-${items.map(i => `${i.name} ${i.qty}개`).join(", ")}
-총 ${totalNum.toLocaleString()}원 입금 부탁드립니다 😊`;
-
-  orderText.style.display = "block";
-  copyBtn.style.display = "block";
-  orderBtn.disabled = true;
-};
-
-};
-</script>
-
-</body>
-</html>
-
+<scrip
