--- a/index.html
+++ b/index.html
@@ -1,313 +1,171 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>설성푸드 공동구매</title>
+  <meta charset="UTF-8" />
+  <title>설성푸드 공동구매 주문서</title>
 
-<!--
-====================================================
-설성푸드 공동구매 주문서
-====================================================
+  <!--
+  ====================================================
+  설성푸드 공동구매 HTML 주문서
+  ====================================================
 
-[VERSION HISTORY]
+  VERSION HISTORY
 
-v1.0.0
-- 기본 주문 폼 구조 생성
-- 상품 수량 증감 / 합계 계산
+  v1.0.0
+  - 단일 상품 주문 구조
 
-v1.1.0
-- GitHub Pages 배포 구조 확정
-- images/ 폴더 분리
+  v1.1.0
+  - 상품 복수 선택 구조로 변경 (items[])
 
-v1.2.0
-- GAS doPost 연동
-- POST + JSON 방식 고정
+  v1.2.0
+  - GAS POST + JSON 연동
 
-v1.3.0
-- 주문 문구 생성 기능 추가
-- 복사 버튼 추가
+  v1.3.0
+  - validation 강화
+  - 콘솔 로그 추가
 
-v1.4.0
-- fetch 실패 시 JS 전체 중단 문제 발견
+  v1.4.0 (MASTER)
+  - SCRIPT_URL 명시
+  - 상품 배열 복구
+  - 기존 구조 유지 (삭제 없음)
 
-v1.4.1
-- fetch try/catch 적용
-- GAS 오류 발생해도 주문문구 생성 유지
-
-v1.4.2 (STABLE)
-- 버튼 무반응 이슈 제거
-- SCRIPT_URL 고정 규칙 명문화
-- 상용 사용 가능 기준 확정
-
-⚠️ 주의
-- HTML은 GitHub Pages에서만 사용
-- GAS에 HTML 절대 포함 금지
-- SCRIPT_URL 변경 시 반드시 여기 수정
-====================================================
--->
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body {
-  margin:0;
-  padding:16px;
-  background:#f6f7f9;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-}
-
-.container {
-  max-width:420px;
-  margin:auto;
-  background:#fff;
-  border-radius:16px;
-  padding:16px;
-  box-shadow:0 6px 20px rgba(0,0,0,.08);
-}
-
-h1 {
-  text-align:center;
-  font-size:22px;
-  margin-bottom:16px;
-}
-
-.field {
-  margin-bottom:14px;
-}
-.field label {
-  font-size:13px;
-  font-weight:600;
-  display:block;
-  margin-bottom:6px;
-}
-.field input, .field select {
-  width:100%;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid #ddd;
-}
-
-.product {
-  border:1px solid #eee;
-  border-radius:14px;
-  overflow:hidden;
-  margin-bottom:18px;
-}
-
-.product img {
-  width:100%;
-  display:block;
-}
-
-.product-body {
-  padding:12px;
-}
-
-.name {
-  font-weight:700;
-  margin-bottom:6px;
-}
-
-.price {
-  font-weight:800;
-  color:#2f80ed;
-  margin-bottom:10px;
-}
-
-.qty-box {
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
-
-.qty-box button {
-  width:34px;
-  height:34px;
-  border:none;
-  border-radius:8px;
-  font-size:18px;
-}
-
-.qty {
-  font-weight:700;
-  width:24px;
-  text-align:center;
-}
-
-.total {
-  text-align:right;
-  font-size:18px;
-  font-weight:800;
-  margin:18px 0 10px;
-}
-
-button.action {
-  width:100%;
-  padding:16px;
-  font-size:16px;
-  font-weight:700;
-  border:none;
-  border-radius:12px;
-  margin-top:10px;
-}
-
-#orderBtn {
-  background:#2f80ed;
-  color:#fff;
-}
-
-#copyBtn {
-  background:#27ae60;
-  color:#fff;
-  display:none;
-}
-
-textarea {
-  width:100%;
-  margin-top:12px;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid #ccc;
-  display:none;
-}
-</style>
+  ====================================================
+  -->
 </head>
 
 <body>
-<div class="container">
-<h1>설성푸드 공동구매</h1>
+  <h1>설성푸드 공동구매 주문</h1>
 
-<div class="field">
-  <label>오픈채팅 닉네임</label>
-  <input id="nickname">
-</div>
+  <!-- 닉네임 -->
+  <label>
+    닉네임:
+    <input type="text" id="nickname" />
+  </label>
+  <br /><br />
 
-<div class="field">
-  <label>방문 수령일</label>
-  <select id="visit">
-    <option value="">선택</option>
-    <option value="금">금</option>
-    <option value="토">토</option>
-    <option value="일">일</option>
-  </select>
-</div>
+  <!-- 방문일 -->
+  <label>
+    방문일:
+    <input type="date" id="visit" />
+  </label>
+  <br /><br />
 
-<!-- 상품 카드 -->
-<div class="product" data-price="15900">
-  <img src="images/product1.png">
-  <div class="product-body">
-    <div class="name">무항생제 한우 등심 200g</div>
-    <div class="price">15,900원</div>
-    <div class="qty-box">
-      <button class="minus">-</button>
-      <div class="qty">0</div>
-      <button class="plus">+</button>
-    </div>
-  </div>
-</div>
+  <!-- 상품 목록 -->
+  <h3>상품 선택</h3>
 
-<div class="total">
-  총 합계: <span id="total">0</span>원
-</div>
+  <label>
+    <input type="checkbox" class="product" data-name="등심" data-price="30000" />
+    등심 (30,000원)
+    수량:
+    <input type="number" class="qty" min="1" value="1" />
+  </label>
+  <br />
 
-<button id="orderBtn" class="action">주문 완료</button>
-<button id="copyBtn" class="action">📋 주문문구 복사</button>
-<textarea id="orderText" readonly></textarea>
-</div>
+  <label>
+    <input type="checkbox" class="product" data-name="안심" data-price="35000" />
+    안심 (35,000원)
+    수량:
+    <input type="number" class="qty" min="1" value="1" />
+  </label>
+  <br />
 
-<script>
-/* ===============================
-   GAS WEB APP URL (고정)
-=============================== */
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzUWbZXuJDMUqi5BvIxazh5ACRGQd41lDTasRPf4tA0XxR7ocBONz1f20ZdBX9n8YDv/exec";
+  <label>
+    <input type="checkbox" class="product" data-name="채끝" data-price="32000" />
+    채끝 (32,000원)
+    수량:
+    <input type="number" class="qty" min="1" value="1" />
+  </label>
 
-/* ===============================
-   수량 컨트롤
-=============================== */
-document.querySelectorAll(".product").forEach(p => {
-  const qtyEl = p.querySelector(".qty");
-  p.querySelector(".plus").onclick = () => {
-    qtyEl.innerText = Number(qtyEl.innerText) + 1;
-    calc();
-  };
-  p.querySelector(".minus").onclick = () => {
-    qtyEl.innerText = Math.max(0, Number(qtyEl.innerText) - 1);
-    calc();
-  };
-});
+  <br /><br />
 
-function calc() {
-  let sum = 0;
-  document.querySelectorAll(".product").forEach(p => {
-    sum += Number(p.dataset.price) * Number(p.querySelector(".qty").innerText);
-  });
-  document.getElementById("total").innerText = sum.toLocaleString();
-  return sum;
-}
+  <button onclick="submitOrder()">주문 완료</button>
 
-/* ===============================
-   주문 전송 (절대 멈추지 않음)
-=============================== */
-orderBtn.onclick = async () => {
-  const nickname = document.getElementById("nickname").value.trim();
-  const visit = document.getElementById("visit").value;
+  <!-- ================= SCRIPT ================= -->
+  <script>
+    /**
+     * ====================================================
+     * ⚠️ GAS WEB APP URL (절대 삭제 금지)
+     * ====================================================
+     */
+    const SCRIPT_URL =
+      "https://script.google.com/macros/s/AKfycbxsNctvxZ-DA8y7WjhapsuiRfu0iMM_HM9d7jYyff8/dev";
 
-  if (!nickname || !visit) {
-    alert("닉네임과 수령일을 입력하세요");
-    return;
-  }
+    /**
+     * ====================================================
+     * 주문 전송 함수
+     * ====================================================
+     */
+    function submitOrder() {
+      console.log("주문 버튼 클릭");
 
-  const items = [];
-  document.querySelectorAll(".product").forEach(p => {
-    const qty = Number(p.querySelector(".qty").innerText);
-    if (qty > 0) {
-      items.push({
-        name: p.querySelector(".name").innerText,
-        qty,
-        price: Number(p.dataset.price)
+      const nickname = document.getElementById("nickname").value.trim();
+      const visit = document.getElementById("visit").value;
+
+      if (!nickname || !visit) {
+        alert("닉네임과 방문일을 입력하세요.");
+        return;
+      }
+
+      const products = document.querySelectorAll(".product");
+      const qtyInputs = document.querySelectorAll(".qty");
+
+      const items = [];
+      let total = 0;
+
+      products.forEach((product, index) => {
+        if (product.checked) {
+          const name = product.dataset.name;
+          const price = Number(product.dataset.price);
+          const qty = Number(qtyInputs[index].value);
+
+          if (qty <= 0) return;
+
+          items.push({
+            name: name,
+            qty: qty,
+            price: price
+          });
+
+          total += qty * price;
+        }
       });
+
+      if (items.length === 0) {
+        alert("상품을 선택하세요.");
+        return;
+      }
+
+      const payload = {
+        nickname: nickname,
+        visit: visit,
+        items: items,
+        total: total
+      };
+
+      console.log("전송 payload", payload);
+
+      fetch(SCRIPT_URL, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(payload)
+      })
+        .then(res => res.json())
+        .then(result => {
+          console.log("GAS 응답", result);
+
+          if (result.result === "success") {
+            alert("주문이 정상적으로 접수되었습니다.");
+          } else {
+            alert("주문 전송 실패. 다시 시도하세요.");
+          }
+        })
+        .catch(err => {
+          console.error("전송 에러", err);
+          alert("네트워크 오류 발생");
+        });
     }
-  });
-
-  if (!items.length) {
-    alert("상품을 선택하세요");
-    return;
-  }
-
-  const total = calc();
-
-  try {
-    await fetch(SCRIPT_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ nickname, visit, items, total })
-    });
-  } catch (e) {
-    console.warn("GAS 전송 실패 (주문문구는 생성됨)", e);
-  }
-
-  orderText.value =
-`${nickname}님
-${items.map(i => `${i.name} ${i.qty}개`).join(", ")}
-총 ${total.toLocaleString()}원`;
-
-  orderText.style.display = "block";
-  copyBtn.style.display = "block";
-  orderBtn.disabled = true;
-};
-
-/* ===============================
-   복사
-=============================== */
-copyBtn.onclick = () => {
-  orderText.select();
-  document.execCommand("copy");
-  alert("복사 완료");
-};
-</script>
-
+  </script>
 </body>
 </html>
-
-
-
